tests/paczka1/small_fuzzy/53248321.err
Error in line 1: OdPO69 S356 18,7
Error in line 9: 3swc A351 31,7
